--- a/kr.gimaek.comfybed/comfybed/comfybed/view/user/LoginFrm.xaml
+++ b/kr.gimaek.comfybed/comfybed/comfybed/view/user/LoginFrm.xaml
@@ -7,9 +7,10 @@
              x:Class="comfybed.view.user.LoginFrm">
     <ContentPage.Content>
         <StackLayout Margin="20,35,20,25">
-            <Entry x:Name="ID" Placeholder="이메일"></Entry>
-            <Entry x:Name="PW" Placeholder="비밀번호"></Entry>
-            <Button x:Name="Login" Text="로그인1" Clicked="BtnLogin_Clicked" />
+            <Entry x:Name="IDa" Placeholder="이메일1"></Entry>
+            <Entry x:Name="PWb" Placeholder="비밀번호"></Entry>
+            <Button x:Name="Login" Text="로그인" Clicked="BtnLogin_Clicked" />
+            <Button x:Name="Register" Text="회원가입" Clicked="BtnNewRegister_Clicked" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
