--- a/kr.gimaek.comfybed/comfybed/comfybed/view/user/MyInfoFrm.xaml
+++ b/kr.gimaek.comfybed/comfybed/comfybed/view/user/MyInfoFrm.xaml
@@ -5,11 +5,28 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="comfybed.view.user.MyInfoFrm">
-    <ContentPage.Content>
+    <Frame 
+           CornerRadius="5"
+           WidthRequest="310" 
+           HeightRequest="230"
+           Margin="30,0,50,10"
+           HorizontalOptions="Center"
+           BackgroundColor="White"
+           VerticalOptions="Center">
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+        <ScrollView>
+            <ListView x:Name="FirstNotice">
+                <ListView.ItemsSource >
+                    <x:Array Type="{x:Type x:String}">
+                        <x:String>공지사항</x:String>
+                        <x:String>공지사항2</x:String>
+                        <x:String>공지사항3</x:String>
+                        <x:String>공지사항4</x:String>
+                        <x:String>공지사항5</x:String>
+                    </x:Array>
+                </ListView.ItemsSource>
+            </ListView>
+        </ScrollView>
+    </StackLayout>
+    </Frame>
 </ContentPage>
