--- a/kr.gimaek.comfybed/comfybed/comfybed/view/Shop/Shop_DetailFrm.xaml
+++ b/kr.gimaek.comfybed/comfybed/comfybed/view/Shop/Shop_DetailFrm.xaml
@@ -6,77 +6,94 @@
              mc:Ignorable="d"
              x:Class="comfybed.view.Shop.Shop_DetailFrm">
     <ContentPage.Content>
-        <ScrollView>
-            <StackLayout Orientation="Vertical" BackgroundColor="LightGray">
-                <StackLayout BackgroundColor="White">
-                    <StackLayout>
-                        <RelativeLayout>
-                            <Image Source="{Binding Image_Url}"
+        <StackLayout Orientation="Vertical" BackgroundColor="LightGray">
+            <StackLayout BackgroundColor="White">
+                <StackLayout>
+                    <RelativeLayout>
+                        <Image Source="{Binding Image_Url}"
                                             HorizontalOptions="Center"
                                             VerticalOptions="Start"
                                             HeightRequest="280"/>
-                        </RelativeLayout>
-                    </StackLayout>
-                    <StackLayout Orientation="Vertical"
+                    </RelativeLayout>
+                </StackLayout>
+                <StackLayout Orientation="Vertical"
                                              Margin="7,7,7,7"
                                             Padding="10">
-                        <Label Text="{Binding  Shop_Name}"
+                    <Label Text="{Binding  Shop_Name}"
                                             TextColor="Black"
                                             FontSize="30"
                                             FontAttributes="Bold"
                                             FontFamily="Batang"  />
-                        <Label Text="{Binding place}"
+                    <Label Text="{Binding place}"
                                                 TextColor="DarkGray"
                                                 FontSize="Small"
                                                HorizontalOptions="Start"/>
-                        <StackLayout Orientation="Horizontal" HorizontalOptions="Start" IsVisible="{Binding GR_isVisible}">
-                            <Image Source="{Binding Grade_Star}"
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="Start" IsVisible="{Binding GR_isVisible}">
+                        <Image Source="{Binding Grade_Star}"
                                               HeightRequest="20" />
-                            <Label Text="{Binding  Grade, StringFormat='{0:F2}'}"
+                        <!-- <Label Text="{Binding  Grade, StringFormat='{0:F2}'}"
                                                TextColor="Black" />
                             <Label Text="{Binding  Review, StringFormat='(리뷰 {0:D} 개)'}"
-                                                TextColor="MidnightBlue"  />
-                        </StackLayout>
-                        <StackLayout>
-                            <Label Text="최저가보장,예약취소가능" TextColor="Gray" Margin="0,10,10,0" />
-                        </StackLayout>
+                            TextColor="MidnightBlue"  />-->
+                    </StackLayout>
+                    <StackLayout>
+                        <Label Text="최저가보장,예약취소가능" TextColor="Gray" Margin="0,10,10,0" />
                     </StackLayout>
                 </StackLayout>
-                <Frame CornerRadius="10" Margin="7,7,7,7" BackgroundColor="#FE2E64">
-                    <Label Text="선착순 5,000원 즉시 할인! (쿠폰 받기)" FontSize="15"/>
-                </Frame>
-                <StackLayout  BackgroundColor="White">
-                    <StackLayout Orientation="Horizontal" 
+            </StackLayout>
+            <Frame CornerRadius="10" Margin="7,7,7,7" BackgroundColor="#FE2E64">
+                <Label Text="선착순 5,000원 즉시 할인! (쿠폰 받기)" FontSize="15"/>
+            </Frame>
+            <StackLayout Margin="0,1,0,0"
+                                    BackgroundColor="White"
+                                    Orientation="Vertical"
+                                    Padding="10">
+                <Label Text="■ 숙소 이벤트1"
+                                HorizontalOptions="Start"
+                                FontSize="Medium"
+                                FontAttributes="Bold"/>
+                <Label Text="정성 스런 리뷰 작성 시 무료초대권 증정 (자세히 보기)"
+                               HorizontalOptions="Start"
+                                FontSize="Small"
+                           TextColor="Black"/>
+
+            </StackLayout>
+            <StackLayout  BackgroundColor="White" >
+                <StackLayout Orientation="Horizontal" 
                                         HorizontalOptions="Center">
 
-                        <DatePicker x:Name="startDatePicker"
+                    <DatePicker x:Name="startDatePicker"
                                            Format="M"
                                            DateSelected="OnDateSelected" />
-                        <Label Text="   -  " Margin="0,15,0,0"/>
-                        <DatePicker x:Name="endDatePicker"
+                    <Label Text="   -  " Margin="0,15,0,0"/>
+                    <DatePicker x:Name="endDatePicker"
                                             MinimumDate="{Binding Source={x:Reference startDatePicker}, Path=Date}"
                                             Format="M"
                                             DateSelected="OnDateSelected" />
-                        <Label Text="여행 날짜를 선택해주세요" 
+                    <Label Text="여행 날짜를 선택해주세요" 
                                   x:Name="resultLabel"
                                    Margin="0,13,0,0"
                                    FontAttributes="Bold"
                                    HorizontalTextAlignment="End"
                                    TextColor="LightGreen"/>
-                    </StackLayout>
-                    <StackLayout BackgroundColor="Transparent" x:Name="lvData" >
-                        <BindableLayout.ItemTemplate>
-                            <DataTemplate>
-                                <StackLayout Orientation = "Horizontal" HeightRequest="150" WidthRequest="80">
-
-                                    <Button Text="{Binding Shop_Name}" />
-
-                                </StackLayout>
-                            </DataTemplate>
-                        </BindableLayout.ItemTemplate>
+                </StackLayout>
+                <StackLayout BackgroundColor="White" Padding="5">
+                    <StackLayout Orientation="Horizontal">
+                        <StackLayout>
+                            <Image Source="{Binding Image_Url}" WidthRequest="200" HeightRequest="150"/>
+                        </StackLayout>
+                        <StackLayout  Orientation="Vertical">
+                            <Label Text="스탠다드룸 (넷플릭스,PC 2대 완비,싱글룸)" 
+                                   TextColor="Black"
+                                   FontSize="Medium" 
+                                   FontAttributes="Bold"/>
+                            <StackLayout Orientation="Vertical"  HorizontalOptions="EndAndExpand">
+                                <Label Text="대실" VerticalOptions="Center"/>
+                            </StackLayout>
+                        </StackLayout>
                     </StackLayout>
                 </StackLayout>
             </StackLayout>
-        </ScrollView>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
